--- a/sweetyamni.html
+++ b/sweetyamni.html
@@ -19,8 +19,8 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            position: fixed;
-            bottom: 280px;
+            position: relative;
+            bottom: -50px;
         }
 
         .gambar{
