--- a/sweetyamni.html
+++ b/sweetyamni.html
@@ -140,6 +140,8 @@
 
         function startEmojiRain() {
 
+            alert("Kan aii dah nganggap naila lebih, kalo naila nganggap ai apaa?  jawab di WA yaaa 💖");
+
             let gambarList = document.querySelectorAll(".gambar");
             
             gambarList.forEach((gambar, index) => {
